fixed scrolloverflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,11 @@ fill: #a2a9b3;
   border-radius: 10px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  margin: 10px 20px;
+  /*margin: 0px 0px 10px 0px;*/
+}
+
+#accountcard {
+  margin:20px
 }
 
 .card .image {
@@ -231,8 +235,28 @@ fill: #a2a9b3;
   color: #f97316;
 }
 
+.scroll-container {
+  padding: 20px;
+  margin: 0px 20px;
+  background:#1f2937;
+  border-radius: 15px;
+}
 
+.scrolloverflow {
+  /* overflow:auto;
+  height: 50%; */
+  /*margin:20px 20px 0px 20px;'*/
+  padding: 0px 10px 0px 0px;
+  max-height: 73vh;  /* example */
+  overflow-y: auto;
+  display: grid;
+  row-gap: 10px;
+  margin: 0px;
+}
 
+.scrolloverflow ::-webkit-scrollbar {
+  border-radius: 5px;
+}
 
 #main-content {
   transition: margin-left 0.3s ease, transform 0.3s ease;
